# wallpaper

./: .gitignore  CMakeLists.txt  README.md  design.md  release.sh  run.sh
.github/workflows/: flatpak-build.yml
cpp/: CMakeLists.txt  README.md
cpp/src/: appwindow.cpp  appwindow.h  cachemanager.cpp  main.cpp  redditfetcher.cpp  redditfetcher.h  wallpapersetter.cpp  wallpapersetter.h
flatpak/: README.md  manifest.json
flatpak/data/: wallaroo.desktop
src/: appwindow.cpp  appwindow.h  cachemanager.cpp  cachemanager.h  filterspanel.cpp  filterspanel.h  main.cpp  redditfetcher.cpp  sourcespanel.cpp  sourcespanel.h  thumbnailviewer.cpp  thumbnailviewer.h  updateworker.cpp  updateworker.h  wallpapersetter.cpp  wallpapersetter.h
src/wallpaper/: __init__.py  cli.py  gui.py  reddit.py  wallpaper.py
tests/: test_core.py
